--- a/webspider/8.scrapy框架/test_splash/scrapy.cfg
+++ b/webspider/8.scrapy框架/test_splash/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = itcast.settings
+default = test_splash.settings
 
-[deploy:ITcast]
-url = http://localhost:6800/
-project = itcast
+[deploy]
+#url = http://localhost:6800/
+project = test_splash
